examples/test/testpolicy18286.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18286
  namespace: namespace115
spec:
  podSelector:
    matchLabels:
      key1: value17
      key29: value38
      key23: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value0
          key25: value42
      podSelector:
        matchLabels:
          key29: value45
          key16: value13
          key24: value17
